# Truong-Machine

./: .gitignore  CMakeLists.txt  README.md  data.json  input.json  main.cpp  vrp_log.py  vrp_solver.py  vrp_solver_2.py
application/: marine_inventory_routing_problem.cpp
client/: get_mirp.cpp
core/: routing_problem.cpp  routing_problem_factory.cpp  vehicle_routing_problem_with_time_window.cpp
core/formulations/: arc_based_routing_problem.cpp
docs/: MIRP.puml
header/: arc_based_routing_problem.h  get_mirp.h  ising_tools.h  marine_inventory_routing_problem.h  qubo_container.h  qubo_tools.h  routing_problem.h  routing_problem_factory.h  vehicle_routing_problem_with_time_window.h
prototype_testing/input/: data.json
prototype_testing/prototype_v0.1/: vrp_solver.py
prototype_testing/prototype_v0.2/: vrp_log.py  vrp_solver_2.py
prototype_testing/test/: test.py  utils.py
src/vrp_qubo/routing_problem/: __init__.py  routing_problem.py  vehicle_routing_problem_with_timewindow.py
src/vrp_qubo/routing_problem/formulations/: arc_based_rp.py  path_based_rp.py  sequence_based_rp.py
tools/: ising_tools.cpp  qubo_container.cpp  qubo_tools.cpp
unittest/: test_arc_based.cpp  test_get_mirp.cpp  test_mirp.cpp  test_vehicle_routing_problem_with_time_window.cpp
